make separate divs for pages and edit navbar

--- a/style.css
+++ b/style.css
@@ -2,15 +2,6 @@
 
 /* Home Page */
 
-/*#above {
-	width:100%;
-	height:50px;
-	position:fixed;
-	 background-color:#C2F4D1;
-   opacity: 90%;
-   margin-top:-108px;
-     margin-left: -7px;
-}*/
 #navbar {
   font-size: 20px;
   font-family:proxima-nova;
@@ -20,32 +11,26 @@
   position:fixed;
   width:100%; 
   height:35px;  
-   /*background-color:#C2F4D1;*/
-   opacity: 90%;
-   margin-left: -7px;
+  opacity: 90%;
+  margin-left: -7px;
 
-*/}
+}
 .navbarText {
   margin:25px;
 }
+
 .navbarText:hover {
-color: #92E3A9;
-cursor: pointer;
+  color: #92E3A9;
+  cursor: pointer;
 }
 
 #video1{
-    margin-left: 800px;
-    margin-top: 215px;
-    width: 600px;
-    height: auto;
-    margin-bottom:-200px;
+  margin-left: 800px;
+  margin-top: 215px;
+  width: 600px;
+  height: auto;
+  margin-bottom:-200px;
 }
-
-/*video {
-	margin-top: 100px;
-  width: 500px;
-  margin-left:-50px;
-}*/
 
 #intro {
   font-family:"PT Sans Caption";
@@ -55,6 +40,7 @@ cursor: pointer;
   margin-top:-450px;
   margin-left:220px;
 }
+
 #firstName {
   font-family:"PT Sans Caption";
   font-size: 70px;
@@ -63,6 +49,7 @@ cursor: pointer;
   margin-left:240px;
   letter-spacing: 5px;
 }
+
 #lastName {
   font-family:"PT Sans Caption";
   font-size: 70px;
@@ -74,6 +61,11 @@ cursor: pointer;
 
 /*About Page*/
 
+#about {
+  margin-bottom: 400px;
+  height: 100px;
+  margin-top:200px;
+}
 
 #aboutBox {
 	border-radius: 20%;
@@ -86,14 +78,19 @@ cursor: pointer;
 
 }
 #video2 {
-    margin-left: 120px;
-    margin-top: -570px;
-    width: 600px;
-    height: auto;
-    margin-bottom:-200px;
+  margin-left: 120px;
+  margin-top: -610px;
+  width: 600px;
+  height: auto;
+  margin-bottom:-200px;
 }
 
 /*Extracurriculars Page*/
+
+#exc {
+margin-top:300px;
+margin-left: 100px;
+}
 
 #circle1 {
   height: 250px;
@@ -153,96 +150,42 @@ cursor: pointer;
   background-color:#DCF9E4;
   border-radius: 50%;
   display:inline-grid;
-  margin-bottom: -285px;
-  margin-left:530px;
+  margin-bottom: -300px;
+  margin-left:30px;
 }
 
 #video3 {
-    margin-left: 800px;
-    margin-top: -265px;
-    width: 250px;
-    height: 250px;
-    margin-bottom:-200px;
+  margin-left: 800px;
+  margin-top: -265px;
+  width: 250px;
+  height: 250px;
+  margin-bottom:-200px;
   }
 
   /*Projects Page*/
-/*#block1 {
-  width: 250px;
-  height: 250px;
-  border-radius: 20%;
-  background-color: #DEF7E5;
-  display: grid;
-  margin-top: 200px;
-  margin-left: -465px;
-}
 
-#block2 {
-  width: 250px;
-  height: 250px;
-  border-radius: 20%;
-  background-color: #C8F1D4;
-  display: grid;
-  margin-top: -250px;
-  margin-left: -150px;
+#projectsPage {
+  margin-top: 540px;
+  margin-left: 950px;
 }
-
-#block3 {
-  width: 250px;
-  height: 250px;
-  border-radius: 20%;
-  background-color: #B3EBC3;
-  display: grid;
-  margin-top: -250px;
-  margin-left: 165px;
-}
-
-#block4 {
-  width: 250px;
-  height: 250px;
-  border-radius: 20%;
-  background-color: black;
-  display: grid;
-  margin-top: 100px;
-  margin-left: -465px;
-}
-
-#block5 {
-  width: 250px;
-  height: 250px;
-  border-radius: 20%;
-  background-color: green;
-  display: grid;
-  margin-top: -150px;
-  margin-left: -150px;
-}
-
-#block6 {
-  width: 250px;
-  height: 250px;
-  border-radius: 20%;
-  background-color: yellow;
-  display: grid;
-  margin-top: -150px;
-  margin-left: 165px;
-}*/
 
 .projects {
-    font-family: Courier, monospace;
+  font-family: Courier, monospace;
   display: inline-block;
   margin-top: 240px;
   margin-left: -100px;
 }
 
 .projectsText {
-    display: inline-block;
-    overflow: hidden;
-    letter-spacing: 2px;
+  display: inline-block;
+  overflow: hidden;
+  letter-spacing: 2px;
   animation: typing 5s steps(30, end), blink .75s step-end infinite;
-    white-space: nowrap;
-    font-size: 30px;
-    font-weight: 700;
-    border-right: 4px solid orange;
-    box-sizing: border-box;
+  white-space: nowrap;
+  font-size: 30px;
+  font-weight: 700;
+  border-right: 4px solid orange;
+  box-sizing: border-box;
 }
 
 @keyframes typing {
@@ -264,21 +207,27 @@ cursor: pointer;
 }
 
 #video4 {
-    margin-left: -825px;
-    margin-top: -95px;
-    width: 250px;
-    height: 250px;
-    margin-bottom:-200px;
+  margin-left: -825px;
+  margin-top: -95px;
+  width: 250px;
+  height: 250px;
+  margin-bottom:-200px;
   }
 
 /*About Page*/
 
+#contact {
+  margin-top: 600px;
+  margin-left:200px;
+  margin-bottom:400px;
+}
+
 #video5 {
-    margin-left: 700px;
-    margin-top: 50px;
-    width: 250px;
-    height: 250px;
-    margin-bottom:-200px;
+  margin-left: 500px;
+  margin-top: 50px;
+  width: 250px;
+  height: 250px;
+  margin-bottom:-200px;
   }
 
 #downloadButton {
@@ -286,8 +235,8 @@ cursor: pointer;
   width:250px;
   border-radius: 15%;
   background-color: #ABEABD;
-  margin-top: -360px;
-  margin-left:-600px;
+  margin-top: 150px;
+  margin-left:30px;
   text-align: center;
   line-height: 50px;
   font-family: "PT Sans Caption";
@@ -298,9 +247,3 @@ cursor: pointer;
 color:black;
 cursor:pointer;
 }
-/*
-#resume {
-  margin-left: -50px;
-  font-family: "PT Sans Caption";
-  color: black;
-}*/
