--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @import url("https://use.typekit.net/vfx5pdy.css");
  
+
+
 /* Navigation Bar */
+
 #navbar {
   height: 80px;
   font-size: 20px;
-  font-family:proxima-nova;
+  font-family:"proxima-nova";
   color: #696969;
   padding-top: 50px;
   margin-top: -10px;
@@ -18,18 +21,20 @@
 .navbarText {
   margin:25px;
   height: 50px;
+  flex-wrap: wrap;
 }
- 
-.navbarText a {
+
+a:link,
+a:visited,
+a:active {
   text-decoration: none;
   color: black;
 }
- 
-.navbarText: hover {
-  color: #92E3A9;
-  cursor: pointer;
+
+a:hover {
+	color: #92E3A9;
 }
- 
+
 /* Home Page */
  
 #home {
@@ -101,13 +106,13 @@
   margin-top: -610px;
   width: 600px;
   height: auto;
-  margin-bottom:-200px;
+  margin-bottom: -200px;
 }
  
 /*Extracurriculars Page*/
  
-#exc {
-margin-top:300px;
+.exc {
+margin-top: 300px;
 margin-left: 100px;
 }
  
@@ -205,6 +210,7 @@ margin-left: 100px;
   font-weight: 700;
   border-right: 4px solid orange;
   box-sizing: border-box;
+
 }
  
 @keyframes typing {
